# technopark_c_cpp_homework

./: .gitignore  .travis.yml  README.md
it_1/: CMakeLists.txt
it_1/include/: types.h
it_1/source/: main.c  memory_work.c  process.c  read_data.c  test.cpp
it_1/test_in/: CMakeCache.txt  in_1.txt  in_2.txt  in_3.txt  in_5.txt  in_6.txt
it_2/: CMakeLists.txt  compile_commands.json
it_2/include/: multy_proc.h  read_data.h  single_proc.h  types.h
it_2/other/: gendata.py
it_2/source/: main.c  multy_proc.c  multy_proc.h  my_test.cpp  my_test.h  read_data.h  single_proc.c  single_proc.h  types.h  work_data.c
